PR #952 の変更を 1.20.1 Forge 向けに補正