@@ -11,8 +11,8 @@ import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.api.distmarker.OnlyIn;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
 
 import java.util.List;
 
@@ -36,7 +36,7 @@ public final class StoredScrollClientTooltip {
                     .withStyle(ChatFormatting.GRAY));
         } else {
             var details = TooltipsUtils.formatActiveSpellTooltip(stack, tooltip.selectedSpell(), CastSource.SWORD, player);
-            if (!details.isEmpty()) details.removeFirst();
+            if (!details.isEmpty()) details.remove(0);
             lines.addAll(details);
         }
         ScrollSlotTooltipClientHelper.appendHint(lines, tooltip.entries().size());
